--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </section>
         </header>
     </div>
-
+<p>大家好</p>
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
