--- a/index.html
+++ b/index.html
@@ -4,69 +4,113 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Learndialect : ">
+    <meta name="description" content="Fun言，粤语学习应用">
+    <meta name="keywords" content="Fun言，粤语学习应用">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Learndialect</title>
+    <title>Fun言</title>
   </head>
 
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/FrankXiong/LearnDialect">View on GitHub</a>
-
-          <h1 id="project_title">Learndialect</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/FrankXiong/LearnDialect/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/FrankXiong/LearnDialect/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-<p>大家好</p>
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub for Mac or GitHub for Windows, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      <nav>
+        <a href="#"><h3>首页</h3></a>
+        <a href="#section-one"><h3>简介</h3></a>
+        <a href="#section-two"><h3>功能</h3></a>
+        <a href="#section-three"><h3>联系</h3></a>
+        <a href="#section-three"><h3>下载</h3></a>
+      </nav>
+      <section id="cover" class="cover">
+        <!-- <div id="logo">
+          <img src="img/blacktocat.png" alt="logo">
+        </div> -->
+        <h1>Fun言</h1>
+        <p>一款基于Android的粤语学习应用</p>
+        <a href="http://www.wandoujia.com/apps/com.xiongxianren.funyan" class="btn download"><h3>下载</h3></a>
+        <a href="#section-one" class="btn more"><h3>了解更多</h3></a>
       </section>
-    </div>
+      <section id="section-one" class="content">
+        <div class="section-box">
+          <h1>简介</h1>
+          <!-- <img src="img/app_logo.png"> -->
+          <p>在“Fun言”中，我们改变枯燥的教学方式。</p>
+          <p>将学习、翻译和社交融合在一起，创造出寓教于乐的学习体验</p>
+          <p>集成了方言语音识别服务</p>
+          <p>支持广东、四川等6种方言的实时翻译</p>
+          <p>了解更多</p>
+        </div>
+      </section>
+      <section id="section-two" class="content">
+        <div class="section-box">
+            <h1>功能</h1>
+            <h3>集翻译、学习、社交三大元素于一体,帮助用户快速学习粤语</h3>
+          <div class="gn-box-wrapper">
+            <div class="gn-box">
+              <img src="img/ic-fanyi.png" alt="">
+              <h2>语音翻译</h2>
+              <p>将方言语音或文本，实时翻译为普通话。</p>
+              </div>
+            <div class="gn-box">
+              <img src="img/ic-study.png" alt="">
+              <h2>语音教学</h2>
+              <p>包含日常对话、粤语听书、歌曲三大板块。</p>
+            </div>
+            <div class="gn-box">
+              <img src="img/ic-video.png" alt="">
+              <h2>视频教学</h2>
+              <p>精心选取并每日推送粤语教学视频</p>
+            </div>
+          </div>
+          <div class="gn-box-wrapper">
+            <div class="gn-box">
+              <img src="img/ic-pengyouquan.png" alt="">
+              <h2>方言角</h2>
+              <p>可在这里发布状态，结交好友，点赞等，在学习中认识新朋友。</p>
+            </div>
+            <div class="gn-box">
+              <img src="img/ic-exam.png" alt="">
+              <h2>方言测试</h2>
+              <p>提供了一套粤语能力测试题目，供用户测验学习掌握情况</p>
+            </div>
+            <div class="gn-box">
+              <img src="img/ic-article.png" alt="">
+              <h2>每日文摘</h2>
+              <p>精选每日趣文，为用户提供更全方位的学习体验</p>
+            </div>
+          </div>
+        </div> 
+        
+      </section>
+      <section id="section-four" class="content">
+        <div class="section-box">
+          <h1>用户说</h1>
+          <div class="user-evaluate-box">
+            <p>"这里是用户评价这里是用户评价这里是用户评价这里是用户评价"</p>
+            <p class="username">-某某用户-</p>
+          </div>
+          <div class="user-evaluate-box">
+            <p>"这里是用户评价这里是用户评价这里是用户评价这里是用户评价"</p>
+            <p class="username">-某某用户-</p>
+          </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Learndialect maintained by <a href="https://github.com/FrankXiong">FrankXiong</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+        </div>
+      </section>
+      <section id="section-three" class="content">
+        <div class="section-box">
+          <h1>联系</h1>
+          <div class="contact-box-wrapper">
+            <div class="contact-box"><img src="img/qq.png"></div>
+            <div class="contact-box"><a href="http://weibo.com/2892202502/profile?topnav=1&wvr=6"><img src="img/weibo.png"></a></div>
+            <div class="contact-box"><a href="Mailto:xianren_xiong@163.com" id="email"><img src="img/email.png"></a></div>
+          </div>
+        </div>
+      </section>
+        <div class="footer">
+          <p>
+                Copyright &nbsp;&copy;2015 &nbsp;Fun言
+                <span>&nbsp;&nbsp;问题咨询&更多建议：&nbsp; <a href="mailto:xianren_xiong@163.com">xianren_xiong@163.com</a></span>
+            </p>
 
-    
+        </div>
 
   </body>
 </html>
