--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#section-one"><h3>简介</h3></a>
         <a href="#section-two"><h3>功能</h3></a>
         <a href="#section-three"><h3>联系</h3></a>
-        <a href="#section-three"><h3>下载</h3></a>
+        <a href="http://www.wandoujia.com/apps/com.xiongxianren.funyan"><h3>下载</h3></a>
       </nav>
       <section id="cover" class="cover">
         <!-- <div id="logo">
@@ -84,12 +84,12 @@
         <div class="section-box">
           <h1>用户说</h1>
           <div class="user-evaluate-box">
-            <p>"这里是用户评价这里是用户评价这里是用户评价这里是用户评价"</p>
-            <p class="username">-某某用户-</p>
+            <p class="user-words">"我最喜欢语音翻译的功能，语音翻译可以帮我矫正我的发音，我录入的语音如果显示正确，我就很开心。"</p>
+            <p class="user-name">-张同学（重庆医科大学）-</p>
           </div>
           <div class="user-evaluate-box">
-            <p>"这里是用户评价这里是用户评价这里是用户评价这里是用户评价"</p>
-            <p class="username">-某某用户-</p>
+            <p class="user-words">"我试了把我想学的话合成语音，听多了慢慢地可以说出来。这是一个很有创意的想法。"</p>
+            <p class="user-name">-乔同学（重庆大学）-</p>
           </div>
 
         </div>
