--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="gn-box">
               <img src="img/ic-video.png" alt="">
               <h2>视频教学</h2>
-              <p>精心选取并每日推送粤语教学视频</p>
+              <p>精心选取并每日推送粤语教学视频。</p>
             </div>
           </div>
           <div class="gn-box-wrapper">
@@ -69,12 +69,12 @@
             <div class="gn-box">
               <img src="img/ic-exam.png" alt="">
               <h2>方言测试</h2>
-              <p>提供了一套粤语能力测试题目，供用户测验学习掌握情况</p>
+              <p>提供了一套粤语能力测试题目，供用户测验学习掌握情况。</p>
             </div>
             <div class="gn-box">
               <img src="img/ic-article.png" alt="">
               <h2>每日文摘</h2>
-              <p>精选每日趣文，为用户提供更全方位的学习体验</p>
+              <p>精选每日趣文，融合社交分享，为用户提供更全方位的学习体验。</p>
             </div>
           </div>
         </div> 
@@ -85,11 +85,11 @@
           <h1>用户说</h1>
           <div class="user-evaluate-box">
             <p class="user-words">"我最喜欢语音翻译的功能，语音翻译可以帮我矫正我的发音，我录入的语音如果显示正确，我就很开心。"</p>
-            <p class="user-name">-张同学（重庆医科大学）-</p>
+            <p class="user-name">- 张同学（重庆医科大学）-</p>
           </div>
           <div class="user-evaluate-box">
             <p class="user-words">"我试了把我想学的话合成语音，听多了慢慢地可以说出来。这是一个很有创意的想法。"</p>
-            <p class="user-name">-乔同学（重庆大学）-</p>
+            <p class="user-name">- 乔同学（重庆大学）-</p>
           </div>
 
         </div>
@@ -99,7 +99,7 @@
           <h1>联系</h1>
           <div class="contact-box-wrapper">
             <div class="contact-box"><img src="img/qq.png"></div>
-            <div class="contact-box"><a href="http://weibo.com/2892202502/profile?topnav=1&wvr=6"><img src="img/weibo.png"></a></div>
+            <div class="contact-box"><a href="http://weibo.com/u/2892202502"><img src="img/weibo.png"></a></div>
             <div class="contact-box"><a href="Mailto:xianren_xiong@163.com" id="email"><img src="img/email.png"></a></div>
           </div>
         </div>
