--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
           <p>将学习、翻译和社交融合在一起，创造出寓教于乐的学习体验</p>
           <p>集成了方言语音识别服务</p>
           <p>支持广东、四川等6种方言的实时翻译</p>
-          <p>了解更多</p>
+          <p><a href="video.html" class="watch-video">观看演示视频</a></p>
         </div>
       </section>
+      
+
+
       <section id="section-two" class="content">
         <div class="section-box">
             <h1>功能</h1>
@@ -98,7 +101,7 @@
         <div class="section-box">
           <h1>联系</h1>
           <div class="contact-box-wrapper">
-            <div class="contact-box"><img src="img/qq.png"></div>
+            <!-- <div class="contact-box"><img src="img/qq.png"></div> -->
             <div class="contact-box"><a href="http://weibo.com/u/2892202502"><img src="img/weibo.png"></a></div>
             <div class="contact-box"><a href="Mailto:xianren_xiong@163.com" id="email"><img src="img/email.png"></a></div>
           </div>
@@ -106,10 +109,9 @@
       </section>
         <div class="footer">
           <p>
-                Copyright &nbsp;&copy;2015 &nbsp;Fun言
-                <span>&nbsp;&nbsp;问题咨询&更多建议：&nbsp; <a href="mailto:xianren_xiong@163.com">xianren_xiong@163.com</a></span>
-            </p>
-
+              Copyright &nbsp;&copy;2015 &nbsp;Fun言
+          </p>
+          <p>&nbsp;&nbsp;问题咨询&更多建议：&nbsp; <a href="mailto:xianren_xiong@163.com">xianren_xiong@163.com</a></p>
         </div>
 
   </body>
