--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="description" content="Fun言，粤语学习应用">
     <meta name="keywords" content="Fun言，粤语学习应用">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-
+  
     <title>Fun言</title>
   </head>
 
@@ -36,7 +37,7 @@
           <p>将学习、翻译和社交融合在一起，创造出寓教于乐的学习体验</p>
           <p>集成了方言语音识别服务</p>
           <p>支持广东、四川等6种方言的实时翻译</p>
-          <p><a href="video.html" class="watch-video">观看演示视频</a></p>
+          <p><a href="video.html" class="watch-video">观看演示视频<i class="fa fa-film"></i></a></p>
         </div>
       </section>
       
