add video controls

--- a/video.html
+++ b/video.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="video-wrap">
 				<div class="video-inner">
-					<video class="video-player" src="media/introduce.mp4" poster="media/woods.jpg" preload="auto">
+					<video class="video-player" src="media/introduce.mp4" controls="controls" poster="media/video-bg.jpg" preload="auto">
 						<source src="media/woods.webm" type='video/webm; codecs="vp8.0, vorbis"'>
 						<source src="media/woods.ogg" type='video/ogg; codecs="theora, vorbis"'>
 						<source src="media/woods.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
