--- a/video.html
+++ b/video.html
@@ -7,6 +7,9 @@
 		<title>Video</title>
 		<meta name="description" content="Fun言App演示视频" />
 		<meta name="keywords" content="video, Fun言, Android App, 粤语学习" />
+		<meta name="renderer" content="webkit">
+  		<meta http-equiv="Cache-Control" content="no-siteapp" />
+		<link rel="icon" type="image/png" href="img/app_logo.png">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/video.css" />
