--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
       <li class="am-g am-g-fixed am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
         <div class="am-u-sm-4 am-list-thumb">
           <a href="http://www.douban.com/online/11614662/" class="">
-            <img src="http://img5.douban.com/lpic/o636459.jpg" alt="我很囧，你保重....晒晒旅行中的那些囧！"/>
+            <img src="/static/img/thumb0.jpg" alt="thumb0"/>
           </a>
         </div>
 
         <div class=" am-u-sm-8 am-list-main">
-            <h3 class="am-list-item-hd"><a href="http://www.douban.com/online/11614662/" class="">标题</a></h3>
+            <h3 class="am-list-item-hd"><a href="/static/img/thumb.jpg" class="xx_list_item_title">标题过长标题过长标题过长标题过长标题过长标题过长标题过长标题过长</a></h3>
 
 	            <div class="am-list-item-text am-u-sm-4 xx_list_item_info " >
 		            <span>作者：</span>
@@ -130,13 +130,13 @@
       </li>
       <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
         <div class="am-u-sm-4 am-list-thumb">
-          <a href="http://www.douban.com/online/11624755/" class="">
-            <img src="http://img3.douban.com/lpic/o637240.jpg" alt="我最喜欢的一张画"/>
+          <a href="/static/img/thumb.jpg" class="">
+            <img src="/static/img/thumb.jpg" alt="我最喜欢的一张画"/>
           </a>
         </div>
 
         <div class=" am-u-sm-8 am-list-main">
-            <h3 class="am-list-item-hd"><a href="http://www.douban.com/online/11624755/" class="">标题</a></h3>
+            <h3 class="am-list-item-hd"><a href="/static/img/thumb.jpg" class="xx_list_item_title">标题</a></h3>
 
             <div class="am-list-item-text am-u-sm-4 xx_list_item_info " >
 		            <span>作者：</span>
@@ -162,44 +162,12 @@
       <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
         <div class="am-u-sm-4 am-list-thumb">
           <a href="http://www.douban.com/online/11624755/" class="">
-            <img src="http://img3.douban.com/lpic/o637240.jpg" alt="我最喜欢的一张画"/>
+            <img src="/static/img/thumb.jpg" alt="我最喜欢的一张画"/>
           </a>
         </div>
 
         <div class=" am-u-sm-8 am-list-main">
-            <h3 class="am-list-item-hd"><a href="http://www.douban.com/online/11624755/" class="">标题</a></h3>
-
-            <div class="am-list-item-text am-u-sm-4 xx_list_item_info " >
-		            <span>作者：</span>
-		            <span class="xx_list_author">XXX</span>
-		         </div>
-	            <div class="am-list-item-text am-u-sm-8 xx_list_item_right">
-		            <span>发布时间：</span>
-		            <span class="xx_list_time">2015.11.11</span>
-	            </div>
-
-
-	            <div class="am-list-item-text am-u-sm-4 xx_list_item_info">
-		            <span>分类：</span>
-		            <span class="xx_list_type">XXX</span>
-	            </div>
-	            <div class="am-list-item-text am-u-sm-8 xx_list_item_right">
-		            <span>阅读量：</span>
-		            <span class="xx_list_read_count">1000</span>
-	            </div>
-
-        </div>
-      </li>
-
-      <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
-        <div class="am-u-sm-4 am-list-thumb">
-          <a href="http://www.douban.com/online/11624755/" class="">
-            <img src="http://img3.douban.com/lpic/o637240.jpg" alt="我最喜欢的一张画"/>
-          </a>
-        </div>
-
-        <div class=" am-u-sm-8 am-list-main">
-            <h3 class="am-list-item-hd"><a href="http://www.douban.com/online/11624755/" class="">标题</a></h3>
+            <h3 class="am-list-item-hd"><a href="/static/img/thumb.jpg" class="xx_list_item_title">标题</a></h3>
 
             <div class="am-list-item-text am-u-sm-4 xx_list_item_info " >
 		            <span>作者：</span>
@@ -226,12 +194,12 @@
       <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
         <div class="am-u-sm-4 am-list-thumb">
           <a href="http://www.douban.com/online/11624755/" class="">
-            <img src="http://img3.douban.com/lpic/o637240.jpg" alt="我最喜欢的一张画"/>
+            <img src="/static/img/thumb.jpg" alt="我最喜欢的一张画"/>
           </a>
         </div>
 
         <div class=" am-u-sm-8 am-list-main">
-            <h3 class="am-list-item-hd"><a href="http://www.douban.com/online/11624755/" class="">标题</a></h3>
+            <h3 class="am-list-item-hd"><a href="/static/img/thumb.jpg" class="xx_list_item_title">标题</a></h3>
 
             <div class="am-list-item-text am-u-sm-4 xx_list_item_info " >
 		            <span>作者：</span>
@@ -258,12 +226,12 @@
       <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
         <div class="am-u-sm-4 am-list-thumb">
           <a href="http://www.douban.com/online/11624755/" class="">
-            <img src="http://img3.douban.com/lpic/o637240.jpg" alt="我最喜欢的一张画"/>
+            <img src="/static/img/thumb.jpg" alt="我最喜欢的一张画"/>
           </a>
         </div>
 
         <div class=" am-u-sm-8 am-list-main">
-            <h3 class="am-list-item-hd"><a href="http://www.douban.com/online/11624755/" class="">标题</a></h3>
+            <h3 class="am-list-item-hd"><a href="/static/img/thumb.jpg" class="xx_list_item_title">标题</a></h3>
 
             <div class="am-list-item-text am-u-sm-4 xx_list_item_info " >
 		            <span>作者：</span>
@@ -290,12 +258,44 @@
       <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
         <div class="am-u-sm-4 am-list-thumb">
           <a href="http://www.douban.com/online/11624755/" class="">
-            <img src="http://img3.douban.com/lpic/o637240.jpg" alt="我最喜欢的一张画"/>
+            <img src="/static/img/thumb.jpg" alt="我最喜欢的一张画"/>
           </a>
         </div>
 
         <div class=" am-u-sm-8 am-list-main">
-            <h3 class="am-list-item-hd"><a href="http://www.douban.com/online/11624755/" class="">标题</a></h3>
+            <h3 class="am-list-item-hd"><a href="/static/img/thumb.jpg" class="xx_list_item_title">标题</a></h3>
+
+            <div class="am-list-item-text am-u-sm-4 xx_list_item_info " >
+		            <span>作者：</span>
+		            <span class="xx_list_author">XXX</span>
+		         </div>
+	            <div class="am-list-item-text am-u-sm-8 xx_list_item_right">
+		            <span>发布时间：</span>
+		            <span class="xx_list_time">2015.11.11</span>
+	            </div>
+
+
+	            <div class="am-list-item-text am-u-sm-4 xx_list_item_info">
+		            <span>分类：</span>
+		            <span class="xx_list_type">XXX</span>
+	            </div>
+	            <div class="am-list-item-text am-u-sm-8 xx_list_item_right">
+		            <span>阅读量：</span>
+		            <span class="xx_list_read_count">1000</span>
+	            </div>
+
+        </div>
+      </li>
+
+      <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
+        <div class="am-u-sm-4 am-list-thumb">
+          <a href="http://www.douban.com/online/11624755/" class="">
+            <img src="/static/img/thumb.jpg" alt="我最喜欢的一张画"/>
+          </a>
+        </div>
+
+        <div class=" am-u-sm-8 am-list-main">
+            <h3 class="am-list-item-hd"><a href="/static/img/thumb.jpg" class="xx_list_item_title">标题</a></h3>
 
             <div class="am-list-item-text am-u-sm-4 xx_list_item_info " >
 		            <span>作者：</span>
