add title length check

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div id='xx_gallery'>
   <div class='xx_gallery_wrap'>
     <div class="xx_gallery_box">
-    	<img src="/static/img/2.png" alt="2">
+    	<img src="/static/img/1.jpg" alt="2">
 	</div>
     <div class="xx_gallery_box">
     	<img src="/static/img/3.png" alt="3">
