--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 	<META HTTP-EQUIV="Cache-Control" CONTENT="no-cache"> 
 	<META HTTP-EQUIV="expires" CONTENT="0">
 	<link rel="stylesheet" href="/static/css/amazeui.min.css">
+	<link rel="stylesheet" href="/static/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="/static/css/main-xx.css">
 	<script src="/static/js/main-xx.js"></script>
 
 	<script src="/static/js/Rundiv.min.js"></script>
-
 
 </head>
 
@@ -35,13 +35,13 @@
 <div id='xx_gallery'>
   <div class='xx_gallery_wrap'>
     <div class="xx_gallery_box">
-    	<img src="/static/img/1.jpg" alt="2">
+    	<img src="/static/img/3.jpg" alt="2">
 	</div>
     <div class="xx_gallery_box">
-    	<img src="/static/img/3.png" alt="3">
+    	<img src="/static/img/2.jpg" alt="3">
 	</div>
     <div class="xx_gallery_box">
-    	<img src="/static/img/4.png" alt="4">
+    	<img src="/static/img/4.jpg" alt="4">
     </div>
   </div>
 </div>
