--- a/index.html
+++ b/index.html
@@ -1,122 +1,147 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="Fun言，粤语学习应用">
-    <meta name="keywords" content="Fun言，粤语学习应用">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="icon" type="image/png" href="img/app_logo.png">
-    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-  
-    <title>Fun言</title>
-  </head>
 
-  <body>
-      <nav>
-        <a href="#"><h3>首页</h3></a>
-        <a href="#section-one"><h3>简介</h3></a>
-        <a href="#section-two"><h3>功能</h3></a>
-        <a href="#section-three"><h3>联系</h3></a>
-        <a href="http://www.wandoujia.com/apps/com.xiongxianren.funyan"><h3>下载</h3></a>
-      </nav>
-      <section id="cover" class="cover">
-        <!-- <div id="logo">
-          <img src="img/blacktocat.png" alt="logo">
-        </div> -->
-        <h1>Fun言</h1>
-        <p>一款基于Android的粤语学习应用</p>
-        <a href="http://www.wandoujia.com/apps/com.xiongxianren.funyan" class="btn download"><h3>下载</h3></a>
-        <a href="#section-one" class="btn more"><h3>了解更多</h3></a>
-      </section>
-      <section id="section-one" class="content">
-        <div class="section-box">
-          <h1>简介</h1>
-          <!-- <img src="img/app_logo.png"> -->
-          <p>在“Fun言”中，我们改变枯燥的教学方式。</p>
-          <p>将学习、翻译和社交融合在一起，创造出寓教于乐的学习体验</p>
-          <p>集成了方言语音识别服务</p>
-          <p>支持广东、四川等6种方言的实时翻译</p>
-          <p><a href="video.html" class="watch-video">观看演示视频<i class="fa fa-film"></i></a></p>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="Fun言，粤语学习应用">
+  <meta name="keywords" content="Fun言，粤语学习应用">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="Cache-Control" content="no-siteapp" />
+  <link rel="icon" type="image/png" href="img/app_logo.png">
+  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
+
+  <title>Fun言</title>
+</head>
+
+<body>
+  <nav>
+    <a href="#">
+      <h3>首页</h3>
+    </a>
+    <a href="#section-one">
+      <h3>简介</h3>
+    </a>
+    <a href="#section-two">
+      <h3>功能</h3>
+    </a>
+    <a href="#section-three">
+      <h3>联系</h3>
+    </a>
+    <a href="http://www.wandoujia.com/apps/com.xiongxianren.funyan">
+      <h3>下载</h3>
+    </a>
+  </nav>
+  <section id="cover" class="cover">
+    <div class="logo">
+      <img src="img/app_logo.png">
+    </div>
+    <h1 class="title">Fun言</h1>
+    <h3 class="sub-title">一款基于Android的粤语学习应用</h3>
+    <div class="btn-group">
+      <a href="http://www.wandoujia.com/apps/com.xiongxianren.funyan" class="btn download">
+        <h3>下载</h3>
+      </a>
+      <a href="#section-one" class="btn more">
+        <h3>了解更多</h3>
+      </a>
+    </div>
+  </section>
+  <section id="section-one" class="content">
+    <div class="section-box">
+      <h1>简介</h1>
+      <ul>
+        <li>
+          在“Fun言”中，我们改变枯燥的教学方式。
+        </li>
+        <li>
+          将学习、翻译和社交融合在一起，创造出寓教于乐的学习体验
+        </li>
+        <li>
+          集成了方言语音识别服务
+        </li>
+        <li>
+          支持广东、四川等6种方言的实时翻译
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section id="section-two" class="content">
+    <div class="section-box">
+      <h1 class="title">功能</h1>
+      <h3 class="sub-title">集翻译、学习、社交三大元素于一体,帮助用户快速学习粤语</h3>
+      <div class="gn-box-wrapper">
+        <div class="gn-box">
+          <img src="img/e1.png" alt="">
+          <h2>语音翻译</h2>
+          <p>将方言语音或文本，实时翻译为普通话。</p>
         </div>
-      </section>
-      
-
-
-      <section id="section-two" class="content">
-        <div class="section-box">
-            <h1>功能</h1>
-            <h3>集翻译、学习、社交三大元素于一体,帮助用户快速学习粤语</h3>
-          <div class="gn-box-wrapper">
-            <div class="gn-box">
-              <img src="img/ic-fanyi.png" alt="">
-              <h2>语音翻译</h2>
-              <p>将方言语音或文本，实时翻译为普通话。</p>
-              </div>
-            <div class="gn-box">
-              <img src="img/ic-study.png" alt="">
-              <h2>语音教学</h2>
-              <p>包含日常对话、粤语听书、歌曲三大板块。</p>
-            </div>
-            <div class="gn-box">
-              <img src="img/ic-video.png" alt="">
-              <h2>视频教学</h2>
-              <p>精心选取并每日推送粤语教学视频。</p>
-            </div>
-          </div>
-          <div class="gn-box-wrapper">
-            <div class="gn-box">
-              <img src="img/ic-pengyouquan.png" alt="">
-              <h2>方言角</h2>
-              <p>可在这里发布状态，结交好友，点赞等，在学习中认识新朋友。</p>
-            </div>
-            <div class="gn-box">
-              <img src="img/ic-exam.png" alt="">
-              <h2>方言测试</h2>
-              <p>提供了一套粤语能力测试题目，供用户测验学习掌握情况。</p>
-            </div>
-            <div class="gn-box">
-              <img src="img/ic-article.png" alt="">
-              <h2>每日文摘</h2>
-              <p>精选每日趣文，融合社交分享，为用户提供更全方位的学习体验。</p>
-            </div>
-          </div>
-        </div> 
-        
-      </section>
-      <section id="section-four" class="content">
-        <div class="section-box">
-          <h1>用户说</h1>
-          <div class="user-evaluate-box">
-            <p class="user-words">"我最喜欢语音翻译的功能，语音翻译可以帮我矫正我的发音，我录入的语音如果显示正确，我就很开心。"</p>
-            <p class="user-name">- 张同学（重庆医科大学）-</p>
-          </div>
-          <div class="user-evaluate-box">
-            <p class="user-words">"我试了把我想学的话合成语音，听多了慢慢地可以说出来。这是一个很有创意的想法。"</p>
-            <p class="user-name">- 乔同学（重庆大学）-</p>
-          </div>
-
+        <div class="gn-box">
+          <img src="img/e2.png" alt="">
+          <h2>语音教学</h2>
+          <p>包含日常对话、粤语听书、歌曲三大板块。</p>
         </div>
-      </section>
-      <section id="section-three" class="content">
-        <div class="section-box">
-          <h1>联系</h1>
-          <div class="contact-box-wrapper">
-            <!-- <div class="contact-box"><img src="img/qq.png"></div> -->
-            <div class="contact-box"><a href="http://weibo.com/u/2892202502"><img src="img/weibo.png"></a></div>
-            <div class="contact-box"><a href="Mailto:xianren_xiong@163.com" id="email"><img src="img/email.png"></a></div>
-          </div>
+        <div class="gn-box">
+          <img src="img/e3.png" alt="">
+          <h2>视频教学</h2>
+          <p>精心选取并每日推送粤语教学视频。</p>
         </div>
-      </section>
-        <div class="footer">
-          <p>
-              Copyright &nbsp;&copy;2015 &nbsp;Fun言
-          </p>
-          <p>&nbsp;&nbsp;问题咨询&更多建议：&nbsp; <a href="mailto:xianren_xiong@163.com">xianren_xiong@163.com</a></p>
+      </div>
+      <div class="gn-box-wrapper">
+        <div class="gn-box">
+          <img src="img/e4.png" alt="">
+          <h2>方言角</h2>
+          <p>可在这里发布状态，结交好友，点赞等，在学习中认识新朋友。</p>
         </div>
+        <div class="gn-box">
+          <img src="img/e5.png" alt="">
+          <h2>方言测试</h2>
+          <p>提供了一套粤语能力测试题目，供用户测验学习掌握情况。</p>
+        </div>
+        <div class="gn-box">
+          <img src="img/e6.png" alt="">
+          <h2>每日文摘</h2>
+          <p>精选每日趣文，融合社交分享，为用户提供更全方位的学习体验。</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="section-four" class="content">
+    <div class="section-box">
+      <h1>用户说</h1>
+      <div class="user-evaluate-box">
+        <p class="user-words">"我最喜欢语音翻译的功能，语音翻译可以帮我矫正我的发音，我录入的语音如果显示正确，我就很开心。"</p>
+        <p class="user-name">- 张同学（重庆医科大学）-</p>
+      </div>
+      <div class="user-evaluate-box">
+        <p class="user-words">"我试了把我想学的话合成语音，听多了慢慢地可以说出来。这是一个很有创意的想法。"</p>
+        <p class="user-name">- 乔同学（重庆大学）-</p>
+      </div>
 
-  </body>
+    </div>
+  </section>
+  <section id="section-three" class="content">
+    <div class="section-box">
+      <h1>联系</h1>
+      <div class="contact-box-wrapper">
+        <div class="contact-box">
+          <p>邮箱：<a href="Mailto:xianrenxiong@qq.com" id="email">xianrenxiong@qq.com</a></p>
+        </div>
+        <div class="contact-box">
+          <p>微博：<a href="http://weibo.com/u/2892202502">frankxiongxyz</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="footer">
+    <p>
+      Copyright &nbsp;&copy;2015 &nbsp;Fun言
+    </p>
+    <p>&nbsp;&nbsp;问题咨询&更多建议：&nbsp; <a class="email" href="mailto:xianrenxiong@qq.com">xianrenxiong@qq.com</a></p>
+  </div>
+
+</body>
+
 </html>
